Guard against drag target having no wayland surface

This case may potentially arise with internal windows, tooltips, etc.

BUG: 510032
(cherry picked from commit 2c04714d1dfef8546470daa9b5678e57760233fc)